--- a/src/about.css
+++ b/src/about.css
@@ -49,6 +49,10 @@ body {
   grid-template-columns: 1fr 1fr;
   grid-gap: 60px;
 }
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 30px;
+}
 .img-fluid {
   border: none;
   border-radius: 20px;
@@ -81,6 +85,16 @@ body {
 
 .links a:hover {
   color: #faad39;
+}
+.my-skills {
+  font-size: 50px;
+  color: #faad39;
+}
+.my-skills .skills-title {
+  font-size: 14px;
+}
+.about-section-fluid .tech {
+  font-size: 20px;
 }
 footer {
   padding: 30px 50px;
@@ -120,4 +134,44 @@ footer span a {
 }
 footer span a:hover {
   color: #faad39;
+}
+@media (max-width: 960px) {
+  .grid-2-columns {
+    grid-template-columns: 1fr;
+    grid-gap: none;
+  }
+  .logo {
+    display: none;
+  }
+
+  .about-section-fluid {
+    padding: 40px 20px;
+  }
+  .about-section-fluid h1 {
+    font-size: 40px;
+  }
+  .about-section-fluid h3 {
+    font-size: 20px;
+  }
+  .links a {
+    font-size: 12px;
+    margin-left: 10px;
+  }
+
+  .img-fluid {
+    width: 100%;
+    height: auto;
+  }
+  footer .email a {
+    font-size: 20px;
+  }
+  .contact-links a {
+    font-size: 25px;
+  }
+  footer p {
+    font-size: 14px;
+  }
+  .about-section-fluid .tech {
+    font-size: 16px;
+  }
 }
