--- a/src/project.css
+++ b/src/project.css
@@ -7,6 +7,24 @@ body {
   margin: 0;
   padding: 0;
 }
+.projects-section-fluid a {
+  text-decoration: none;
+  color: #ef7537;
+  font-size: 16px;
+  font-weight: bold;
+  transition: all 200ms ease-in-out;
+  line-height: 1.5;
+  border: 1px solid #ef7537;
+  padding: 20px 40px;
+  border-radius: 8px;
+  background: rgba(239, 117, 55, 0.2);
+  backdrop-filter: blur(10px);
+  display: inline-block;
+}
+.projects-section-fluid a:hover {
+  color: #faad39;
+  border: 1px solid #faad39;
+}
 .nav-bar {
   width: 100%;
   padding: 0 50px;
@@ -33,4 +51,107 @@ body {
 
 .links a:hover {
   color: #faad39;
+}
+.projects-section-fluid {
+  color: white;
+  padding: 30px 80px;
+}
+.projects-section-fluid h1 {
+  font-size: 50px;
+  font-weight: 900;
+}
+.projects-section-fluid p {
+  opacity: 0.5;
+}
+.grid {
+  display: grid;
+}
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+}
+.project {
+  height: 600px;
+  width: 500px;
+  border: none;
+  border-radius: 20px;
+}
+footer {
+  padding: 30px 50px;
+  margin: 0 auto;
+  background: #18161d;
+}
+footer .email a {
+  line-height: 1.5;
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: bolder;
+  color: #ef7537;
+  transition: all 200ms ease-in-out;
+}
+footer .email a:hover {
+  color: #faad39;
+  text-shadow: 2px 2px 6px rgba(240, 237, 233, 0.776);
+}
+.contact-links a {
+  margin-left: 30px;
+  font-size: 40px;
+  color: #ef7537;
+  text-decoration: none;
+}
+.contact-links a:hover {
+  color: #faad39;
+  text-shadow: 2px 2px 6px rgba(240, 237, 233, 0.776);
+}
+footer p {
+  text-align: center;
+  color: #ef7537;
+  font-weight: bold;
+}
+footer span a {
+  color: #ef7537;
+  transition: all 200ms ease-in-out;
+}
+footer span a:hover {
+  color: #faad39;
+}
+
+@media (max-width: 960px) {
+  .grid-2-columns {
+    grid-template-columns: 1fr;
+    grid-gap: none;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .projects-section-fluid {
+    padding: 42px 20px;
+  }
+  .projects-section-fluid h1 {
+    font-size: 40px;
+  }
+  .projects-section-fluid h3 {
+    font-size: 20px;
+  }
+  .links a {
+    font-size: 12px;
+    margin-left: 10px;
+  }
+
+  .project {
+    width: 100%;
+    height: auto;
+    margin-top: 10px !important;
+  }
+  footer .email a {
+    font-size: 20px;
+  }
+  .contact-links a {
+    font-size: 25px;
+  }
+  footer p {
+    font-size: 14px;
+  }
 }
