--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,11 @@
 body {
   font-family: "PT Mono", monospace;
   margin: 0 auto;
-  background: #28272b;
 }
 .container-fluid {
-  max-width: 1100px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
-
 .nav-bar {
   width: 100%;
   padding: 0 50px;
@@ -117,7 +115,6 @@ header .about-me a:hover {
   border: 1px solid #ef7537;
 }
 footer {
-  max-width: 1076px;
   padding: 30px 50px;
   margin: 0 auto;
   background: #faad39;
