--- a/src/about.css
+++ b/src/about.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
 }
 .about-section-fluid {
-  padding: 80px 150px;
+  padding: 50px 150px;
   color: white;
 }
 .about-section-fluid h1 {
@@ -145,7 +145,7 @@ footer span a:hover {
   }
 
   .about-section-fluid {
-    padding: 40px 20px;
+    padding: 20px 20px;
   }
   .about-section-fluid h1 {
     font-size: 40px;
@@ -154,10 +154,12 @@ footer span a:hover {
     font-size: 20px;
   }
   .links a {
-    font-size: 12px;
+    font-size: 10px;
     margin-left: 10px;
   }
-
+  .nav-bar {
+    padding: 0 16px;
+  }
   .img-fluid {
     width: 100%;
     height: auto;
