--- a/src/achivements.css
+++ b/src/achivements.css
@@ -82,15 +82,75 @@ body {
   height: auto;
   border-radius: 10px;
 }
-@media (max-width: 1024px) {
+footer {
+  padding: 30px 50px;
+  margin: 0 auto;
+  background: #18161d;
+}
+footer .email a {
+  line-height: 1.5;
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: bolder;
+  color: #ef7537;
+  transition: all 200ms ease-in-out;
+}
+footer .email a:hover {
+  color: #faad39;
+  text-shadow: 2px 2px 6px rgba(240, 237, 233, 0.776);
+}
+.contact-links a {
+  margin-left: 30px;
+  font-size: 40px;
+  color: #ef7537;
+  text-decoration: none;
+}
+.contact-links a:hover {
+  color: #faad39;
+  text-shadow: 2px 2px 6px rgba(240, 237, 233, 0.776);
+}
+footer p {
+  text-align: center;
+  color: #ef7537;
+  font-weight: bold;
+}
+footer span a {
+  color: #ef7537;
+  transition: all 200ms ease-in-out;
+}
+footer span a:hover {
+  color: #faad39;
+}
+@media (max-width: 960px) {
   .grid-3-columns {
     grid-template-columns: 1fr;
+  }
+  #certificates {
+    padding: 20px 20px;
   }
   .logo {
     display: none;
   }
+  .links a {
+    font-size: 10px;
+  }
+  .nav-bar {
+    padding: 0 16px;
+  }
   .small-image {
     max-width: 100%;
     height: auto;
+  }
+  .nav-bar {
+    padding: 0 16px;
+  }
+  footer .email a {
+    font-size: 20px;
+  }
+  .contact-links a {
+    font-size: 25px;
+  }
+  footer p {
+    font-size: 14px;
   }
 }
