--- a/src/project.css
+++ b/src/project.css
@@ -127,7 +127,7 @@ footer span a:hover {
   }
 
   .projects-section-fluid {
-    padding: 42px 20px;
+    padding: 20px 20px;
   }
   .projects-section-fluid h1 {
     font-size: 40px;
@@ -136,8 +136,11 @@ footer span a:hover {
     font-size: 20px;
   }
   .links a {
-    font-size: 12px;
+    font-size: 10px;
     margin-left: 10px;
+  }
+  .nav-bar {
+    padding: 0 16px;
   }
 
   .project {
