--- a/src/achivements.css
+++ b/src/achivements.css
@@ -82,6 +82,26 @@ body {
   height: auto;
   border-radius: 10px;
 }
+.achievements-section h2 {
+  text-align: center;
+  font-size: 30px bold;
+  color: white;
+}
+.cv {
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+.cv a {
+  color: #ef7537;
+  text-decoration: none;
+}
+.cv a:hover {
+  color: #faad39;
+}
+.cv span {
+  margin-left: 20px;
+}
 footer {
   padding: 30px 50px;
   margin: 0 auto;
@@ -126,7 +146,7 @@ footer span a:hover {
     grid-template-columns: 1fr;
   }
   #certificates {
-    padding: 20px 20px;
+    padding: 10px 20px;
   }
   .logo {
     display: none;
@@ -143,6 +163,9 @@ footer span a:hover {
   }
   .nav-bar {
     padding: 0 16px;
+  }
+  .cv {
+    font-size: 20px;
   }
   footer .email a {
     font-size: 20px;
