fixed the nav bar in all pages

--- a/src/achivements.css
+++ b/src/achivements.css
@@ -7,34 +7,21 @@ body {
   margin: 0;
   padding: 0;
 }
-.nav-bar {
-  width: 100%;
-  padding: 0 50px;
-  background-color: #18161d;
-  position: sticky;
-  top: 0;
-  z-index: 999;
+.navbar {
+  background: #18161d;
+}
+.navbar a {
+  color: #ef7537;
+
+  transition: 200ms all ease-in-out;
+}
+.navbar a:hover {
+  color: #ffc108;
 }
 .logo {
-  height: 60px;
-  width: 80px;
+  height: 40px;
+  width: 90px;
 }
-
-.links a {
-  text-decoration: none;
-  color: #ef7537;
-  font-size: 16px;
-  font-weight: bolder;
-  margin-left: 10px;
-  letter-spacing: 1px;
-  transition: all 200ms ease-in-out;
-  line-height: 1.5;
-}
-
-.links a:hover {
-  color: #faad39;
-}
-
 .grid {
   display: grid;
 }
@@ -46,6 +33,7 @@ body {
 #certificates {
   color: white;
   padding: 30px 50px;
+  margin-top: 70px;
 }
 #certificates h2 {
   margin-top: 15px !important;
@@ -148,9 +136,7 @@ footer span a:hover {
   #certificates {
     padding: 10px 20px;
   }
-  .logo {
-    display: none;
-  }
+
   .links a {
     font-size: 10px;
   }
