--- a/src/about.css
+++ b/src/about.css
@@ -10,6 +10,7 @@ body {
 .about-section-fluid {
   padding: 50px 150px;
   color: white;
+  margin-top: 100px;
 }
 .about-section-fluid h1 {
   font-weight: 900;
@@ -59,30 +60,22 @@ body {
   height: 500px;
   width: 400px;
 }
-.nav-bar {
-  width: 100%;
-  padding: 0 50px;
-  background-color: #18161d;
-  position: sticky;
-  top: 0;
-  z-index: 999;
+
+.navbar {
+  background: #18161d;
+}
+.navbar a {
+  color: #ef7537;
+
+  transition: 200ms all ease-in-out;
+}
+.navbar a:hover {
+  color: #ffc108;
 }
 .logo {
-  height: 60px;
-  width: 80px;
+  height: 40px;
+  width: 90px;
 }
-
-.links a {
-  text-decoration: none;
-  color: #ef7537;
-  font-size: 16px;
-  font-weight: bolder;
-  margin-left: 10px;
-  letter-spacing: 1px;
-  transition: all 200ms ease-in-out;
-  line-height: 1.5;
-}
-
 .links a:hover {
   color: #faad39;
 }
