--- a/src/styles.css
+++ b/src/styles.css
@@ -6,32 +6,20 @@ body {
   margin: 0;
   padding: 0;
 }
-.nav-bar {
-  width: 100%;
-  padding: 0 50px;
-  background-color: #18161d;
-  position: sticky;
-  top: 0;
-  z-index: 999;
+.navbar {
+  background: #18161d;
+}
+.navbar a {
+  color: #ef7537;
+
+  transition: 200ms all ease-in-out;
+}
+.navbar a:hover {
+  color: #ffc108;
 }
 .logo {
-  height: 60px;
-  width: 80px;
-}
-
-.links a {
-  text-decoration: none;
-  color: #ef7537;
-  font-size: 16px;
-  font-weight: bolder;
-  margin-left: 10px;
-  letter-spacing: 1px;
-  transition: all 200ms ease-in-out;
-  line-height: 1.5;
-}
-
-.links a:hover {
-  color: #faad39;
+  height: 40px;
+  width: 90px;
 }
 
 header {
@@ -165,9 +153,7 @@ footer span a:hover {
   header h3 {
     font-size: 20px;
   }
-  .logo {
-    display: none;
-  }
+
   .links a {
     font-size: 10px;
     margin-left: 10px;
