--- a/src/contact.css
+++ b/src/contact.css
@@ -7,6 +7,9 @@ body {
   margin: 0;
   padding: 0;
 }
+.navbar-toggler {
+  background-color: #ef7537;
+}
 .navbar {
   background: #18161d;
 }
@@ -65,7 +68,6 @@ body {
   padding: 15px 30px;
   font-size: 16px;
   font-weight: bold;
-
   color: #ef7537;
   border: 1px solid #ef7537;
   border-radius: 8px;
@@ -84,12 +86,6 @@ body {
   margin: 0 auto;
 }
 @media (max-width: 960px) {
-  .links a {
-    font-size: 10px;
-  }
-  .nav-bar {
-    padding: 0 16px;
-  }
   .contact-section {
     padding: 0 10px;
     margin-top: 100px !important;
