--- a/src/about.css
+++ b/src/about.css
@@ -144,13 +144,18 @@ footer span a:hover {
   }
   .about-section-fluid h1 {
     font-size: 40px;
+    text-align: center;
   }
   .about-section-fluid h3 {
     font-size: 20px;
+    text-align: center;
   }
   .about-section-fluid a {
     display: block;
     margin: 0 auto;
+    text-align: center;
+  }
+  .about-section-fluid p {
     text-align: center;
   }
 
